--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -1,28 +1,22 @@
-.image-main {
-    position:absolute;
-    left:0px;
-    top:0px;
-    z-index:-1;
+
+body {
+    margin-top:70px;
 }
-    
-.image-logo {
-    position:static;
-    left: calc(50% - 125px);
-    bottom:30%;
-    width: 250px;
-    height: auto;
+.about {
+    margin-top: 150px;
 }
 
-@media screen and (max-width: 992px) {
-    .image-logo {
-        display:none;
-    }
-    
-    .image-main {
-        position:relative;
-        left:0;
-        top:0;
-        z-index:0;
-    }
+.rounded-circle {
+    height:150px;
+    width:170px;
+   /* border-radius: 50%; */
 }
-    
+
+.bg-light {
+    background-color: #bb3928!important;
+}
+
+.navbar-collapse {
+    justify-content:center;
+    margin-right:150px;
+}
