--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -1,4 +1,6 @@
 
+/*----------- Universal ---------------*/
+
 body {
     margin-top:70px;
 }
@@ -6,17 +8,188 @@ body {
     margin-top: 150px;
 }
 
-.rounded-circle {
-    height:150px;
-    width:170px;
-   /* border-radius: 50%; */
-}
+
+/*---------------- Navigation -----------------*/
 
 .bg-light {
-    background-color: #bb3928!important;
+    background-color: #3a89a4!important;
 }
 
 .navbar-collapse {
     justify-content:center;
     margin-right:150px;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    text-transform:uppercase;
+    margin:15px;
+}
+
+
+
+/*---------------------- #social dropdownlink -----------*/
+
+.droplink {
+  color: black;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fafae6;
+  min-width:180px;
+  z-index: 1;
+  text-align:center;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.dropdown-content a:hover {
+    background-color: #fafae6;
+    color: #3a89a4;
+}
+
+.dropdown:hover .dropdown-content {
+    display: inline-block;
+}
+
+/*-------------------- welcome Section -------------------*/
+
+
+#grid-box {
+    height:500px;
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#text-box {
+    height: 350px;
+    width:auto;
+    border: 30px solid #3a89a4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left:50px;
+    margin-right:50px;
+}
+
+.rounded-circle {
+    height:150px;
+    width:150px;
+    border: 10px solid #fafae6;
+}
+
+.top-left {
+    top:0;
+    left:0;
+    position: absolute;
+}
+
+.top-right {
+    top:0;
+    right:0;
+    position:absolute;
+}
+
+.bottom-left {
+    bottom:0;
+    left:0;
+    position:absolute;
+}
+
+.bottom-right {
+    bottom:0;
+    right:0;
+    position:absolute;
+}
+
+#setting {
+    background-color:#fafae6;
+}
+
+/* ------------------- end of old ver ------------*/
+
+#introduction {
+    background-color:#fafae6;
+    height:auto;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#tv_box {
+    background-color:#fafae6;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    position:relative;
+}
+
+#tv_box img {
+    width:90%;
+    height: 80%;
+}
+
+.centered {
+    position:absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    background-color:linear-gradient(rgba(0, 0, 0, .3), rgba(255, 255, 255, .3));
+}
+
+/* --------------- welcome mobile section ---------------- */
+
+#introduction-mobile {
+    height: auto;
+    background-color:#f3df00;
+}
+
+/* ------------ Media Queries --------------*/
+
+@media screen and (max-width:992px) {
+    .navbar-dark .navbar-nav .nav-link {
+        margin:5px;
+    }
+    .navbar-collapse {
+        margin-right:0;
+    }
+}
+
+@media screen and (max-width:650px) {
+    .navbar-dark .navbar-nav .nav-link {
+        font-size:.8rem;
+    }
+}
+
+@media screen and (max-width:576px) {
+    .welcome {
+        display:none;
+    }
+    .welcome-mobile {
+        display: block;
+    }
+    .navbar-dark .navbar-nav .nav-link {
+        font-size:1rem;
+    }
+}
+
+
+@media screen and (min-width:576px) {
+    .welcome-mobile {
+        display:none;
+    }
 }
