--- a/mock-content/content.css
+++ b/mock-content/content.css
@@ -1,12 +1,22 @@
 
+
+/* ------------- table for music singles ---------------- */
 #playlist {
     background-color: #e39134;
 }
 
 .table {
-   background-color:#fafae6; 
-   margin-top:50px;
-   margin-bottom:50px;
+   background-color:#ffffff;
+   margin-top:80px;
+   margin-bottom:80px;
+} 
+
+.table td {
+    border-top:none;
+}
+
+.table td:hover {
+    background-color:#ffffff;
 }
 
 .pull-left {
@@ -20,13 +30,46 @@
 
 .clearfix a {
     text-decoration: none;
+    color:#3a89a4;
+}
+
+.clearfix a:hover {
+    color:black;
 }
 
 .clearfix img {
     margin-right: 5px;
+    border-radius:50%;
 }
 
-.table {
-    display: flex;
-    justify-content: space-between;
+.table td:hover .clearfix img {
+    border:1px solid black;
 }
+
+.btn-primary {
+    background-color:#fafae6;
+    color:#3a89a4;
+    border: 1px solid lightgrey;
+}
+
+.btn-primary:hover {
+    background-color:#3a89a4;
+    color: #fafae6;
+    border:none;
+}
+
+.show>.btn-primary.dropdown-toggle {
+    background-color:#3a89a4;
+    color: #fafae6;
+    border:none;
+}
+
+.btn:focus {
+    background-color:white;
+}
+
+.dropdown-item:hover {
+    background-color:#3a89a4;
+    color:#fafae6;
+}
+
