--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -1,15 +1,23 @@
+/* Color styling schemes
 
-/*----------- Universal ---------------*/
+blue - #3a89a4
+yellow - #f3df00
+white - #fafae6
+orange - #e39134
+light red - #d92b39
+red - #d72235
+red/orange - #bb3928
+
+*/
+
+/*------------------------------- Universal ----------------------------------*/
 
 body {
     margin-top:70px;
 }
-.about {
-    margin-top: 150px;
-}
 
 
-/*---------------- Navigation -----------------*/
+/*----------------------------------- Navbar section -------------------------*/
 
 .bg-light {
     background-color: #3a89a4!important;
@@ -23,11 +31,15 @@ body {
 .navbar-dark .navbar-nav .nav-link {
     text-transform:uppercase;
     margin:15px;
+    color:#fafae6;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: #f3df00;
 }
 
 
-
-/*---------------------- #social dropdownlink -----------*/
+/*------------- Navbar section - #social dropdownlink ---------*/
 
 .droplink {
   color: black;
@@ -50,7 +62,7 @@ body {
 }
 
 .dropdown-content a {
-  color: black;
+  color: #3a89a4;
   padding: 12px 16px;
   text-decoration: none;
   display: inline-block;
@@ -58,107 +70,135 @@ body {
 
 .dropdown-content a:hover {
     background-color: #fafae6;
-    color: #3a89a4;
+    color: #e39134;
 }
 
 .dropdown:hover .dropdown-content {
     display: inline-block;
 }
 
-/*-------------------- welcome Section -------------------*/
+/*------------- Navbar section - mobile resolution -----------*/
 
-
-#grid-box {
-    height:500px;
-    position:relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.mobile i {
+    color:#fafae6;
+    padding:5px;
 }
 
-#text-box {
-    height: 350px;
-    width:auto;
-    border: 30px solid #3a89a4;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left:50px;
-    margin-right:50px;
+.mobile i:hover {
+    color: #e39134;
 }
 
-.rounded-circle {
-    height:150px;
-    width:150px;
-    border: 10px solid #fafae6;
+/*------------------------------ about Section ------------------------------*/
+
+#band-introduction {
+    background-color: #f3df00;
 }
 
-.top-left {
-    top:0;
-    left:0;
-    position: absolute;
-}
-
-.top-right {
-    top:0;
-    right:0;
-    position:absolute;
-}
-
-.bottom-left {
-    bottom:0;
-    left:0;
-    position:absolute;
-}
-
-.bottom-right {
-    bottom:0;
-    right:0;
-    position:absolute;
-}
-
-#setting {
-    background-color:#fafae6;
-}
-
-/* ------------------- end of old ver ------------*/
-
-#introduction {
-    background-color:#fafae6;
-    height:auto;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#tv_box {
-    background-color:#fafae6;
-    margin-top: 80px;
-    margin-bottom: 80px;
+#tv-box {
     position:relative;
 }
 
-#tv_box img {
-    width:90%;
-    height: 80%;
+#tv-box img {
+    width:80%;
+    height:80%;
+    margin-top:50px;
+    margin-bottom:50px;
 }
 
 .centered {
-    position:absolute;
+    position: absolute;
     top: 50%;
-    left: 30%;
-    transform: translate(-50%, -50%);
-    background-color:linear-gradient(rgba(0, 0, 0, .3), rgba(255, 255, 255, .3));
+    left: 40%;
+    transform: translate(-45%, -50%);
 }
 
-/* --------------- welcome mobile section ---------------- */
+/*------------------------------ music section ------------------------------*/
 
-#introduction-mobile {
-    height: auto;
-    background-color:#f3df00;
+/* ------------- table for music singles ---------------- */
+
+#playlist {
+    background-color: #e39134;
 }
 
-/* ------------ Media Queries --------------*/
+.table {
+   background-color:#ffffff;
+   margin-top:80px;
+   margin-bottom:80px;
+} 
+
+.table td {
+    border-top:none;
+}
+
+.table td:hover {
+    background-color:#ffffff;
+}
+
+/* ------------ img styling /screen responsive ----------*/
+
+.pull-left {
+    height:50px;
+    width:50px;
+}
+
+.dropdown {
+    display:block;
+}
+
+.dropdown-toggle {
+    width:100%;
+}
+
+.clearfix a {
+    text-decoration: none;
+    color:#3a89a4;
+}
+
+.clearfix img {
+    margin-right: 5px;
+    border-radius:50%;
+}
+
+.table td:hover .clearfix img {
+    border:1px solid black;
+}
+
+.table td:hover .clearfix a {
+    color:black;
+}
+
+/* -------------- button select elemnts ----------------*/
+
+.btn-primary {
+    background-color:#fafae6;
+    color:#3a89a4;
+    border: 1px solid lightgrey;
+}
+
+.btn-primary:hover {
+    background-color:#3a89a4;
+    color: #fafae6;
+    border:none;
+}
+
+.show>.btn-primary.dropdown-toggle {
+    background-color:#3a89a4;
+    color: #fafae6;
+    border:none;
+}
+
+.btn:focus {
+    background-color:white;
+}
+
+.dropdown-item:hover {
+    background-color:#3a89a4;
+    color:#fafae6;
+}
+
+
+
+/* ----------------------------- Media Queries -------------------------------*/
 
 @media screen and (max-width:992px) {
     .navbar-dark .navbar-nav .nav-link {
@@ -169,27 +209,17 @@ body {
     }
 }
 
-@media screen and (max-width:650px) {
+@media screen and (max-width:768px) {
     .navbar-dark .navbar-nav .nav-link {
         font-size:.8rem;
+        margin:0;
     }
+    
 }
 
 @media screen and (max-width:576px) {
-    .welcome {
-        display:none;
-    }
-    .welcome-mobile {
-        display: block;
-    }
     .navbar-dark .navbar-nav .nav-link {
         font-size:1rem;
     }
 }
 
-
-@media screen and (min-width:576px) {
-    .welcome-mobile {
-        display:none;
-    }
-}
