--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -12,9 +12,9 @@ red/orange - #bb3928
 
 /*------------------------------- Universal ----------------------------------*/
 
-body {
+/*body {
     margin-top:70px;
-}
+}*/
 
 
 .space-150 {
@@ -31,66 +31,33 @@ body {
     color:#3a89a4;
 }
 
+/*---------------------------------- NAVBAR ----------------------------------*/
 
-/*----------------------------------- Navbar section -------------------------*/
-
-.bg-light {
-    background-color: #3a89a4!important;
+.logo-img {
+    width:150px;
+    height:80px;
+    margin:20px; 
+    cursor:pointer;
 }
 
-.navbar-collapse {
-    justify-content:center;
-    margin-right:150px;
+.header {
+    display:flex;
+    justify-content:space-between
 }
 
-.navbar-dark .navbar-nav .nav-link {
-    text-transform:uppercase;
-    margin:15px;
-    color:#fafae6;
+nav {
+    margin:auto 0;
+    padding-left:10px;
 }
 
-.navbar-dark .navbar-nav .nav-link:hover {
-    color: #f3df00;
+nav ul li {
+    display:inline-block;
+    margin: 15px 20px 0 0;
+    align-items:center; 
+    padding:10px;
+    cursor:pointer;
 }
 
-
-/*------------- Navbar section - #social dropdownlink ---------*/
-
-.droplink {
-  color: black;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown-navigation {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #fafae6;
-  min-width:180px;
-  z-index: 1;
-  text-align:center;
-}
-
-.dropdown-content a {
-  color: #3a89a4;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: inline-block;
-}
-
-.dropdown-content a:hover {
-    background-color: #fafae6;
-    color: #e39134;
-}
-
-.dropdown-navigation:hover .dropdown-content {
-    display: inline-block;
-}
 
 /*------------- Navbar section - mobile resolution -----------*/
 
@@ -196,6 +163,8 @@ thead {
     display:block;
 }
 
+
+
 .dropdown-toggle {
     width:100%;
 }
@@ -246,6 +215,7 @@ thead {
     background-color:#3a89a4;
     color:#fafae6;
 }
+
 
 /*------------------- mobile music image ------------*/
 
