--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -14,6 +14,7 @@ red/orange - #bb3928
 
 
 
+
 /*---------------------------------- NAVBAR ----------------------------------*/
 
 .logo-img {
@@ -25,7 +26,7 @@ red/orange - #bb3928
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #3a89a4;
     position: fixed;
     top: 0;
@@ -49,7 +50,7 @@ nav ul li {
 
 nav ul li a {
     color:#fafae6;
-    text-decoration:none;
+    text-decoration:none!important;
 }
 
 nav ul li a:hover {
@@ -60,54 +61,130 @@ nav ul li a:hover {
 /*------------- Navbar section - mobile resolution -----------*/
 
 .dropbtn-nav {
-  background-color: #3a89a4;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+    background-color: #3a89a4;
+    color: #fafae6;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown-nav {
-  position: relative;
-  display: inline-block;
-  margin: auto;
+    position: relative;
+    display: inline-block;
+    margin: auto;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content-nav {
-  display: none;
-  background-color: #3a89a4;
-  width:auto;
-  z-index: 1;
+    display: none;
+    background-color: #3a89a4;
+    width:auto;
+    z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content-nav a {
-  color: #fafae6;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color: #fafae6;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content-nav a:hover {background-color: #f1f1f1}
+.dropdown-content-nav a:hover {
+    color:#f3df00;
+}
 
-/* Show the dropdown menu on hover */
 .dropdown-nav:hover .dropdown-content-nav {
-  display: block;
+    display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown-nav:hover .dropbtn-nav {
-  background-color: #3a89a4;
+    background-color: #3a89a4;
 }
 
 /*------------------------------ main banner image -------------*/
 
-.image-main {
-    margin-top:70px;
+.image {
+    background-image: url("../assets/images/cover4.jpg");
+    background-size:cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top:120px;
+    max-width:100%;
+    height:650px;
+}
+
+/*------------------------------ about the monkees-------------*/
+
+/*----- top section-----------*/
+
+.background.about {
+    display:flex;
+    background-color: #f3df00;
+    background-size:cover;
+    width:100%;
+    height:700px;
+    padding-top:100px;
+}
+
+.box-side {
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 20%;
+    justify-content: space-around;
+}
+
+.left {
+    align-items:flex-end;
+}
+
+.right {
+    align-items:flex-start;
+}
+
+.box-side img {
+    height:120px;
+    width:120px;
+    border-radius:50%;
+    border:5px solid #fafae6;
+}
+
+.box-center {
+    display:flex;
+    flex-direction:column;
+    height:300px;
+    width:50%;
+    text-align:center;
+    justify-content: space-around;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius:5rem;
+}
+
+
+
+/*------------------------------- Media Queries --------------------*/
+
+@media screen and (max-width: 1024px) {
+    .image {
+        height:550px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .image {
+        height:450px;
+    }
+    .background.about {
+        display:flex;
+        flex-direction:column; 
+        height:auto;  
+    }
+    .box-side {
+        display:none;
+    }
+    .box-center {
+        
+    }
 }
 
 
@@ -118,8 +195,23 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width:680px) {
+    .header {
+        justify-content:center;
+        display:grid;
+    }
+    
+    .image-main {
+        margin-top:170px;
+    }
+    
     .desktop-nav {
         display:none;
     }
 }
 
+@media screen and (max-width:500px) {
+    .image {
+        height:250px;
+        margin-top:160px;
+    }
+}
