--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -103,7 +103,7 @@ nav ul li a:hover {
 
 /*------------------------------ main banner image -------------*/
 
-.image {
+.banner-image {
     background-image: url("../assets/images/cover4.jpg");
     background-size:cover;
     background-position: center;
@@ -122,8 +122,9 @@ nav ul li a:hover {
     background-color: #f3df00;
     background-size:cover;
     width:100%;
-    height:700px;
-    padding-top:100px;
+    height:auto;
+    padding:75px 0;
+    
 }
 
 .box-side {
@@ -161,24 +162,33 @@ nav ul li a:hover {
 }
 
 
+/*------------------- bottom section (band images) -------------*/
+
+.image-box img {
+    display:block;
+    height:auto;
+    width:80%;
+    margin:0 auto;
+    border:10px solid #fafae6;
+}
 
 /*------------------------------- Media Queries --------------------*/
 
 @media screen and (max-width: 1024px) {
-    .image {
+    .banner-image {
         height:550px;
     }
 }
 
 @media screen and (max-width:768px) {
-    .image {
+    .banner-image {
         height:450px;
     }
     .background.about {
         display:flex;
         flex-direction:column; 
         height:auto;
-        padding:40px 10px;  
+        padding:20px 10px 5px 10px;  
     }
     .box-side {
         display:none;
@@ -186,6 +196,10 @@ nav ul li a:hover {
     .box-center {
         width:100%;
         height:auto
+    }
+    
+    .image-box img {
+        width:100%;
     }
 }
 
@@ -212,7 +226,7 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width:500px) {
-    .image {
+    .banner-image {
         height:250px;
         margin-top:160px;
     }
