--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -189,6 +189,7 @@ nav ul li a:hover {
     margin:auto;
     background-color:#fafae6;
     padding:5px;
+    border:5px solid #3a89a4;
 }
 
 .music-col a {
@@ -226,12 +227,61 @@ tr {
     text-align:center;
 }
 
+/*------------- mobile dropdown ---------------*/
+
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
 
 /*------------------------------- Media Queries --------------------*/
 
 @media screen and (max-width: 1024px) {
     .banner-image {
         height:550px;
+    }
+}
+
+
+@media screen and (min-width:769px) {
+     .music-table-mobile {
+        display:none;
     }
 }
 
@@ -255,6 +305,14 @@ tr {
     
     .image-box img {
         width:100%;
+    }
+    
+    .music-table {
+        display:none;
+    }
+    
+    .music-table-mobile {
+        display:block;
     }
 }
 
