--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -101,6 +101,14 @@ nav ul li a:hover {
     background-color: #3a89a4;
 }
 
+.dropdown-content-nav ul li {
+    display:inline-block;
+}
+
+.dropdown-content-nav ul {
+    padding-inline-start:0!important;
+}
+
 /*------------------------------ main banner image -------------*/
 
 .banner-image {
@@ -110,7 +118,7 @@ nav ul li a:hover {
     background-repeat: no-repeat;
     margin-top:120px;
     max-width:100%;
-    height:650px;
+    height:750px;
 }
 
 /*------------------------------ about the monkees-------------*/
@@ -123,8 +131,16 @@ nav ul li a:hover {
     background-size:cover;
     width:100%;
     height:auto;
-    padding:75px 0;
-    
+    padding:100px 0;
+}
+
+.about-image {
+    display:flex;
+    background-color: #f3df00;
+    background-size:cover;
+    width:100%;
+    height:auto;
+    padding-bottom:100px;
 }
 
 .box-side {
@@ -181,7 +197,19 @@ nav ul li a:hover {
     background-size:cover;
     width:100%;
     height:auto;
-    padding:75px 0;
+    padding:100px 0;
+}
+
+.music-table-text {
+    text-align:justify;
+    width:70%;
+    margin:0 auto;
+    margin-bottom:100px;
+}
+
+.music-table-text h2 {
+    text-align:center;
+    margin-bottom:40px;
 }
 
 .music-table {
@@ -232,44 +260,46 @@ tr {
 /*------------- mobile dropdown ---------------*/
 
 .dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+    background-color: #3a89a4;
+    color: #fafae6;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    display: none;
+    position: absolute;
+    background-color: #fafae6;
+    min-width: 160px;
+    z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+    background-color: #f3df00;
+    color:#3a89a4;
+}
 
 .dropdown:hover .dropdown-content {
-  display: block;
+    display: block;
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+    color: #f3df00;
 }
+
 
 
 /*------------------------------- Media Queries --------------------*/
@@ -278,11 +308,41 @@ tr {
     .banner-image {
         height:550px;
     }
+    
+    .pull-left {
+        width:80px;
+        height:80px;
+    }
 }
 
+@media screen and (max-width: 956px) {
+    .music-table {
+        display:none;
+    }
+    
+    .music-table-mobile {
+        display:flex;
+        flex-direction:column;
+    }
+    
+    .dropdown {
+        display:block;
+        margin:auto;
+    }
+    
+    .dropbtn {
+        width:300px;
+        margin:5px;
+        border-radius:5rem;
+    }
+    
+    nav ul li {
+        margin-right:0;
+    }
+}
 
-@media screen and (min-width:769px) {
-     .music-table-mobile {
+@media screen and (min-width:957px) {
+    .music-table-mobile {
         display:none;
     }
 }
@@ -291,15 +351,18 @@ tr {
     .banner-image {
         height:450px;
     }
+    
     .background.about {
         display:flex;
         flex-direction:column; 
         height:auto;
-        padding:20px 10px 5px 10px;  
+        padding:30px 10px;  
     }
+    
     .box-side {
         display:none;
     }
+    
     .box-center {
         width:100%;
         height:auto
@@ -309,12 +372,16 @@ tr {
         width:100%;
     }
     
-    .music-table {
-        display:none;
+    .about-image {
+        padding-bottom:50px;
     }
     
-    .music-table-mobile {
-        display:block;
+    .background.music {
+        padding:50px 0;
+    }
+    
+    .music-table-text {
+        margin-bottom: 30px;
     }
 }
 
