--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -301,6 +301,81 @@ tr {
 }
 
 
+/*-------------------- music images ------------------------ */
+
+
+
+.band-image {
+    height:300px;
+    width:300px;
+    border: 5px solid #fafae6;
+    border-radius:50%;
+    padding:20px;
+    display:block;
+    margin:auto;
+    margin-top:50px;
+}
+
+/*------------------------------- about the events -------------------------*/
+
+#events-background {
+    background-color: #d92b39;
+}
+
+/*------------ text box - events -----------------*/
+
+.events-text {
+    border-radius: 5rem;
+    padding: 30px;
+    background-color: rgba(255, 255, 255, .2);
+    color:#fafae6;
+    text-align:center;
+}
+
+/*------------ image box - events ----------------*/
+
+.xmas-image {
+    display:flex;
+    flex-direction: row-reverse;
+}
+
+/*------------ contact form - events  -------------*/
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */  
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  /*background-color: #f2f2f2;*/
+  padding: 20px;
+}
+
+
 
 /*------------------------------- Media Queries --------------------*/
 
