--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -34,8 +34,7 @@ HTML {
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
+    display: inline-block;
     background-color: #3a89a4;
     position: fixed;
     top: 0;
@@ -46,6 +45,35 @@ HTML {
 
 .nav {
     text-align:right;
+    height:auto;
+    line-height:70px;
+    background-color:pink;
+    float:right;
+    margin-top:25px
+}
+
+.menu {
+  margin: 0 30px 0 0;
+}
+
+.menu a {
+  text-decoration:none;
+  margin:0 10px;
+  line-height:70px;
+  color:#fafae6;
+}
+
+label {
+  width:10px;
+  float:right;
+  margin: 0 40px 0 0 ;
+  font-size:26px;
+  line-height:70px;
+  display:none;
+}
+
+#toggle {
+  display:none;
 }
 
 /*nav {
@@ -448,6 +476,11 @@ label {
 }
 
 @media screen and (max-width:768px) {
+    .header {
+        justify-content:center;
+    }
+    
+    
     .banner-image {
         height:450px;
     }
@@ -493,25 +526,38 @@ label {
 }
 
 
-@media screen and (min-width:681px) {
-    .dropdown-nav {
-        
-    }
-}
-
-@media screen and (max-width:680px) {
+@media screen and (max-width:700px) {
     .header {
-        justify-content:center;
         display:grid;
     }
     
+    label {
+        display:block;
+        cursor:pointer;
+    }
+    
+    .menu {
+        text-align:center;
+        width:100%;
+        display:none;
+    }
+    
+    .menu a {
+        display:block;
+        margin:0;
+    }
+    
+    #toggle:checked + .menu {
+        display:block;
+    }
+}
+
+
+@media screen and (max-width:680px) {
     .image-main {
         margin-top:170px;
     }
     
-    .desktop-nav {
-    
-    }
 }
 
 @media screen and (max-width:500px) {
