--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -163,68 +163,7 @@ label {
   border-radius:50%;
 }
 
-
-
-/*
-
-.about-image {
-    display:flex;
-    background-color: #f3df00;
-    background-size:cover;
-    width:100%;
-    height:auto;
-    padding-bottom:100px;
-}
-
-.box-side {
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    width: 20%;
-    justify-content: space-around;
-}
-
-.left {
-    align-items:flex-end;
-    margin-right:15px;
-}
-
-.right {
-    align-items:flex-start;
-    margin-left:15px;
-}
-
-.box-side img {
-    height:120px;
-    width:120px;
-    border-radius:50%;
-    border:5px solid #fafae6;
-}
-
-.box-center {
-    display:flex;
-    flex-direction:column;
-    height:300px;
-    width:50%;
-    text-align:center;
-    justify-content: center;
-    background-color: rgba(255, 255, 255, 0.3);
-    border-radius:5rem!important;
-    padding: 0 20px;
-}
-
-
-
-
-.image-box  {
-    display:flex;
-    height:auto;
-    width:80%;
-    margin:0 auto;
-    border:10px solid #fafae6;
-}
-
-/*------------------------------ about the music-------------*/
+/*------------------------------ THE MUSIC -------------*/
 
 .background.music {
     display:flex;
@@ -295,6 +234,10 @@ tr {
 
 /*------------- mobile dropdown ---------------*/
 
+.music-table-mobile {
+    display:none;
+}
+
 .dropbtn {
     background-color: #3a89a4;
     color: #fafae6;
@@ -350,6 +293,7 @@ tr {
     margin-top:50px;
 }
 
+
 /*------------------------------- EVENTS -------------------------*/
 
 .background.events {
@@ -362,7 +306,56 @@ tr {
     padding:100px 0;
 }
 
+.events-img-txt {
+    display:flex;
+    flex-direction:row;
+    margin:auto;
+    width:80%;
+    padding-bottom:30px;
+}
 
+.events-text {
+    padding:0 30px;
+    background-color:rgba(255,255,255,0.4);
+    border-radius:4rem;
+    padding: 10px 30px;
+    margin:0 30px;
+    text-align:center;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.container.contact {
+    padding: 20px;
+    width:40%;
+    display:block;
+    margin:auto;
+}
+
+
+   
 
 
 
@@ -434,6 +427,7 @@ tr {
 @media screen and (max-width:768px) {   
     .banner-image {
         height:450px;
+    }
 }
 
 @media screen and (max-width:700px) {
@@ -487,11 +481,7 @@ tr {
 }
 
 
-
-
-
-
-
+/*------------------------------- THE MUSIC MEDIA QUERIES --------------------*/
 
 @media screen and (max-width: 1024px) {
     .pull-left {
@@ -500,16 +490,14 @@ tr {
     }
 }
 
-@media screen and (max-width: 956px) {
+@media screen and (max-width:977px) {
+    .music-table-mobile {
+        display:block;
+        margin:auto;
+    }
     .music-table {
         display:none;
     }
-    
-    .music-table-mobile {
-        display:flex;
-        flex-direction:column;
-    }
-    
     .dropdown {
         display:block;
         margin:auto;
@@ -520,52 +508,43 @@ tr {
         margin:5px;
         border-radius:5rem;
     }
+}
+
+@media screen and (max-width:500px) {
+    .band-image {
+        border:none;
+        height:auto;
+        width:auto;
+    }
+}
+
+
+/*------------------------------- THE EVENTS MEDIA QUERIES --------------------*/
+
+@media screen and (max-width:1024px) {
+    .events-img-txt {
+        flex-direction:column;
+    }
     
+    .events-img {
+        margin:auto;
+        padding-top:20px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .container.contact {
+        width:80%;
+    }
+}
+
+
+
+
    
-}
-
-@media screen and (min-width:957px) {
-    .music-table-mobile {
-        display:none;
-    }
-}
-   
-@media screen and (max-width:768px) {   
-    
-    .background.music {
-        padding:50px 0;
-    }
-    
-    .music-table-text {
-        margin-bottom: 30px;
-    }
-    
-    .xmas-image {
-        display:flex;
-        flex-direction: inherit;
-        justify-content:center;
-        margin-top:30px;
-    }
-}
-
-
-/*@media screen and (max-width:680px) {
-    .image-main {
-        margin-top:170px;
-    }
-    
-}*/
 
 
 
-@media screen and (max-width:350px) {
-    .xmas-image {
-        display:flex;
-        flex-direction: column;
-        justify-content:center;
-        margin-top:30px;
-    }  
-}
 
 
 
