--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -128,6 +128,7 @@ label {
     flex-direction:column;
     align-items:center;
     justify-content:space-around;
+    padding:10px;
 }
 
 .circle-images img {
@@ -146,26 +147,33 @@ label {
     align-items:center;
 }
 
+.text-box img {
+    height:120px;
+    width:280px;
+}
+
 .text-box p {
     padding:0 20px;
     display:flex;
     text-align:center;
-    line-height:45px;
+    line-height:35px;
     letter-spacing:0.5px;
     color:#545050;
+    font-size:22px;
 }
 
 .image-box {
-  display:flex;
-  justify-content:center;
-  padding:100px 0;
+    display:flex;
+    justify-content:center;
+    padding:100px 0;
 }
 
 .image-box img {
-  width:70%;
-  border:10px solid #fafae6;
-  border-radius:50%;
+    width:70%;
+    border:10px solid #fafae6;
+    border-radius:50%;
 }
+
 
 /*------------------------------ THE MUSIC -------------*/
 
@@ -186,17 +194,32 @@ label {
     margin-bottom:100px;
 }
 
+.music-table-text p {
+    padding:0 20px;
+    display:flex;
+    text-align:center;
+    line-height:40px;
+    letter-spacing:0.5px;
+    color:#fafae6;
+    font-size:25px;
+}
+
 .music-table-text h2 {
     text-align:center;
     margin-bottom:40px;
+    color:#fafae6;
+    font-size:40px;
+    text-shadow:2px 2px #3a89a4;
 }
 
 .music-table {
-    display:flex;
-    justify-content:space-between;
-    margin:auto;
-    background-color:rgba(255,255,255,0.4);
-    padding:10px;   
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    background-color: rgba(255,255,255,0.4);
+    padding: 60px;
+    border: 3px solid #545050;
+    border-radius: 5%;   
 }
 
 .music-col {
@@ -230,6 +253,11 @@ label {
 
 tr {
     text-align:center;
+}
+
+th {
+    font-size:25px;
+    padding:10px;
 }
 
 .class-1, .class-1 a {
@@ -463,27 +491,32 @@ input[type=submit]:hover {
 /*------------------------------- THE MONKEES MEDIA QUERIES --------------------*/
 
 @media screen and (max-width:922px) {
-  .circle-images img {
-    height:80px;
-    width:80px;
-  }
+     .circle-images {
+        display:none;
+    }
+    
+     .text-box {
+      width:100%;
+    }
 }
 
 @media screen and (max-width:768px) {
-    .background.about {
+     .background.about {
         padding:50px 0;
     }
-    
     
     .image-box {
         padding:30px 0;
     }
+
+    .content-box {
+      flex-direction:column
+    }
+
 }
 
 @media screen and (max-width:649px) {
-    .circle-images {
-        display:none;
-    }
+
     .text-box {
         width:100%;
         height:auto;
