--- a/mock-header/mhs.css
+++ b/mock-header/mhs.css
@@ -57,7 +57,8 @@ span {
     height:auto;
     line-height:70px;
     float:right;
-    margin-top:25px
+    margin-top:25px;
+    font-size:22px;
 }
 
 .menu {
@@ -67,8 +68,9 @@ span {
 .menu a {
   text-decoration:none;
   margin:0 10px;
-  line-height:70px;
+  line-height:80px;
   color:#fafae6;
+  padding:5px;
 }
 
 .menu a:hover {
@@ -151,9 +153,10 @@ label {
     align-items:center;
 }
 
-.text-box img {
-    height:120px;
-    width:280px;
+h1 {
+    font-size:40px;
+    text-shadow:2px 2px #3a89a4;
+    text-transform:uppercase;
 }
 
 .text-box p {
@@ -214,6 +217,7 @@ label {
     color:#fafae6;
     font-size:40px;
     text-shadow:2px 2px #3a89a4;
+    text-transform:uppercase;
 }
 
 .music-table {
@@ -455,6 +459,17 @@ input[type=submit]:hover {
 /*------------------------------- MEDIA QUERIES --------------------*/
 
 /*------------------------------- NAVBAR MEDIA QUERIES --------------------*/
+
+@media screen and (max-width:898px) {
+    .nav {
+        font-size:16px;
+    }
+    
+    .menu a {
+        padding:0;
+    }
+}
+
 
 @media screen and (max-width:768px) {
     .header {
